fix(core): do not stretch provider logos in selection modal (#7128)

--- a/app/scripts/modules/core/src/modal/modals.less
+++ b/app/scripts/modules/core/src/modal/modals.less
@@ -326,6 +326,7 @@ abbr.select2-search-choice-close {
 .card-choices {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   .card {
     border: 1px solid var(--color-alto);
     border-radius: 2px;
@@ -333,6 +334,8 @@ abbr.select2-search-choice-close {
     margin: 15px;
     padding: 30px 15px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
     &.active {
       border: 1px solid var(--color-accent);
       background-color: var(--color-accent-g2);
